examples/test/testpolicy15009.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15009
  namespace: namespace347
spec:
  podSelector:
    matchLabels:
      key42: value13
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key12: value18
          key13: value17
          key3: value30
      podSelector:
        matchLabels:
          key9: value32
          key11: value35
